--- a/aboutme.html
+++ b/aboutme.html
@@ -7,10 +7,47 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style type="text/css">
+      body{
+        background-color: #FDF4EC;
+      }
+      .rec{
+        position: absolute;
+      width: 100%;
+      height: 100px;
+      left: 0px;
+      top: 0px;
+      background: #E3C1A2;
+      }
+      .intro{
+        position: absolute;
+      height: 52px;
+      left: 250px;
+      top: 182px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 40px;
+      line-height: 47px;
+      }
+      .look{
+        position: absolute;
+      height: 55px;
+      left: 488px;
+      top: 306px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 30px;
+      line-height: 35px;
+      }
+
+    </style>
 
     <title>About me</title>
   </head>
-  <body style = "background-color: #baa773">
+  <body style = "margin-bottom: 100px">
+    <div class = "rec"></div>
     <div class = "container">
     <div class = "row" style="padding-top: 30px" >
       <div class="col-12">
@@ -37,19 +74,12 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
-    <div class = "row">
-    <div class = "col-sm-6">
-      <img src="https://www.bounteous.com/sites/default/files/styles/insights_preview_image/public/insights/2019-10/previews/20191003_blog_scoping_a_data_science_project_in_a_smarter_way_website.png?itok=GbSdANu3" style="width:100%">
-   </div>
-   <div class = "col-sm-6">
-      <h4>Hi my name is Sophia. I </h4>
-   </div>
+  
+        
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
       </article> -->
-  </div>
-  </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
