--- a/index.html
+++ b/index.html
@@ -8,50 +8,89 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style type="text/css">
-    	.rec{
-    		position: absolute;
-			width: 100%;
-			height: 100px;
-			left: 0px;
-			top: 0px;
-			background: #FEDC85;
-    	}
-    	.intro{
-    		position: absolute;
-			height: 52px;
-			left: 250px;
-			top: 182px;
-			font-family: Roboto;
-			font-style: normal;
-			font-weight: normal;
-			font-size: 40px;
-			line-height: 47px;
-    	}
-    	.look{
-    		position: absolute;
-			height: 55px;
-			left: 488px;
-			top: 306px;
-			font-family: Roboto;
-			font-style: normal;
-			font-weight: normal;
-			font-size: 30px;
-			line-height: 35px;
-    	}
-    	.project1{
-    		position: absolute;
-			width: 479px;
-			height: 321px;
-			left: 136px;
-			top: 455px;
-			background: #C4C4C4;
-    	}
+      body{
+        background-color: #FFFBF1;
+      }
+      .rec{
+        position: absolute;
+      width: 100%;
+      height: 100px;
+      left: 0px;
+      top: 0px;
+      background: #FEDC85;
+      }
+      .intro{
+        position: absolute;
+      height: 52px;
+      left: 250px;
+      top: 182px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 40px;
+      line-height: 47px;
+      }
+      .look{
+        position: absolute;
+      height: 55px;
+      left: 488px;
+      top: 306px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 30px;
+      line-height: 35px;
+      }
+      .project1{
+        position: absolute;
+      width: 500px;
+      height: 321px;
+      left: 136px;
+      top: 455px;
+      border: 1px solid #000000;
+      box-sizing: border-box;
+      border-radius: 35px;
+      }
+      .project2{
+      position: absolute;
+      width: 500px;
+      height: 321px;
+      left: 723px;
+      top: 455px;
+      border: 1px solid #000000;
+      box-sizing: border-box;
+      border-radius: 35px;
+      }
+      .project3
+      {
+        position: absolute;
+      width: 500px;
+      height: 321px;
+      left: 426px;
+      top: 820px;
+      border: 1px solid #000000;
+      box-sizing: border-box;
+      border-radius: 35px;
+      }
+
+      .borrowing{
+       position: absolute;
+
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 40px;
+      line-height: 47px;
+      text-align: center;
+
+      }
+
     </style>
 
     <title>About me</title>
   </head>
-  <body style = "background-color: ">
-  	<div class = "rec"></div>
+  <body style = "margin-bottom: 100px">
+    <div class = "rec"></div>
     <div class = "container">
     <div class = "row" style="padding-top: 30px" >
       <div class="col-12">
@@ -81,7 +120,9 @@
   
         <h1 class = "intro">Hi, my name is Sophia. I am a user experience designer.</h1>
         <h3 class = "look">View some of my projects here!</h3>
-   <div class = "project1"> </div>
+    <div class = "project1 borrowing">Borrwing Clothes App</div>
+    <div class = "project2"> </div>
+    <div class = "project3 container"> </div>
 
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
