--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style type="text/css">
       body{
-        background-color: #FDF4EC;
+        background-color: #FFFFFC;
       }
       .rec{
         position: absolute;
@@ -40,6 +40,23 @@
       font-weight: normal;
       font-size: 30px;
       line-height: 35px;
+      }
+      .col-sm-5{
+        top: 100px;
+
+      }
+      img {
+      padding: 10px;
+      height: 400px;
+      transform: rotate(90deg)
+      }
+      .col-sm-7{
+      top: 100px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 30px;
+       width: 500px;
       }
 
     </style>
@@ -73,6 +90,10 @@
         </nav>
       </div>
     </div>
+  </div>
+   <div class="row">
+    <div class="col-sm-5"> <img src = "IMG_2446.JPG"></div>
+    <div class="col-sm-7" style="width: 400px"> Hi, my name is Sophia. I am a third year <br> majoring in Psychology and Cognitive Science <br> with a specilization in HCI at UCSD. </div>
   </div>
   
         
