--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   
         <h1 class = "intro">Hi, my name is Sophia. I am a user experience designer.</h1>
         <h3 class = "look">View some of my projects here!</h3>
-    <div class = "project1 borrowing">Borrwing Clothes App</div>
+    <div class = "project1 borrowing"><a href = "borrowingApp.html">Borrwing Clothes App</div>
     <div class = "project2"> </div>
     <div class = "project3 container"> </div>
 
