--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -66,31 +66,84 @@
       }
       h5{
         position: absolute;
-        width: 272px;
+        width: 900px;
         height: 42px;
         left: 117px;
         top: 435px;
         font-family: Roboto;
         font-style: italic;
-        font-weight: 300;
         font-size: 25px;
         line-height: 35px;
       }
       h6{
         position: absolute;
-        width: 900px;
+        width: 1000px;
         height: 42px;
-        left: 300px;
+        left: 117px;
         top: 440px;
         font-family: Roboto;
-        font-weight: 300;
         font-size: 20px;
         line-height: 35px;
       }
-
+      p{
+        position: absolute;
+        width: 1000px;
+        height: 42px;
+        left: 125px;
+        top: 530px;
+        font-family: Roboto;
+        font-size: 20px;
+        line-height: 35px;
+      }
+      .note{
+        position: absolute;
+        width: 300px;
+        height: 252px;
+        left: 950px;
+        top: 120px;
+        background: #F4ECFF;
+        font-family: Roboto;
+        font-style: italic;
+        font-weight: bold;
+        font-size: 30px;
+        line-height: 35px;
+        text-align: center;
+        padding: 10px;
+      }
+      .wording{
+        position: absolute;
+        width: 232px;
+        height: 122px;
+        left: 1128px;
+        top: 229px;
+        font-family: Roboto;
+        font-style: italic;
+        font-weight: bold;
+        font-size: 30px;
+        line-height: 35px;
+        text-align: center;
+      }
+      .stick{
+        position: absolute;
+        width: 15px;
+        height: 2px;
+        left: 1105px;
+        top: 140px;
+        background: #6C6767;
+        transform: rotate(-29.34deg);
+      }
+      .ball{
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        right: 222px;
+        top: 130px;
+        border-radius: 50%;
+        background: #FF0404;
+      }
     </style>
 
-    <title>About me</title>
+    <title> <img src = "IMG_2446.JPG"></title>
   </head>
   <body style = "margin-bottom: 100px">
     <div class = "rec"></div>
@@ -124,12 +177,17 @@
         <h1 class = "borrowing"> Borrowing Clothes Mobile App</h1>
         <div class = "nom"></div>
         <h4>Overview</h4>
-        <h5 style = "top: 390px; width: 1200px"> Whether you buy or rent your clothes, the bill can rack up. Is it worth it to buy a shirt you will only wear once? </h5>
-        <h5 style = "font-weight: bold">About the app: </h5>
-        <h6> Created a mobile "app" for an interactive design class that allows people to borrow clothes from users near them. Over 7 weeks, I worked collaboritvty in a team of 3 to create this app.</h6>
-        <h5 style =  "top: 515px; font-weight: bold"> Solution: </h5>
-        <p> Created an app that allows users to borrow clothes from others. This allows users to complete their temporary look they had in mind without spendind money. </p>
-
+        <h5 style = "top: 390px; width: 1200px">Whether you buy or rent your clothes, the bill can rack up. Is that new shirt you only wore once worth the price?</h5>
+        <h6 style = "font-size: 20px"> <b>About the app:</b> Created a mobile "app" for an interactive design class that allows people to borrow clothes from users near them. Over 7 weeks, I worked collaboritvty in a team of 3 to create this app.</h6>
+        <h6 style =  "top: 515px"> <b> Solution: </b> Created an app that allows users to borrow clothes from others. This allows users to complete their temporary look they had in mind without spendind money.</h6>
+        <h6 style =  "top: 590px"> <b>Time line: </b> ~7 weeks</h6>
+        <h6 style = "top: 625px"> <b>The Team: </b> Sophia, Tin and Kristine </h6>
+        <h6 style = "top: 660px"> <b>My Role: </b> </h6>
+        <h4 style = "top: 710px"> User Research </h4>
+        <h4 style = "top: 1000px"> Story Board goes here, user research we found on how this is a good app </h4>
+        <div class = "note"> <a target = "_blank" href = "http://a9-borrow.herokuapp.com/home"><br>Click Here to view project!</a> <br><br> Username: COGS <br> Password: 120</div>
+        <div class = "stick"> </div>
+        <div class = "ball"> </div>
   
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
