--- a/aboutme.html
+++ b/aboutme.html
@@ -92,7 +92,7 @@
     </div>
   </div>
    <div class="row">
-    <div class="col-sm-5"> <img src = "IMG_2446.JPG"></div>
+    <div class="col-sm-5"> <img src = "IMG_2446.jpg"></div>
     <div class="col-sm-7" style="width: 400px"> Hi, my name is Sophia. I am a third year <br> majoring in Psychology and Cognitive Science <br> with a specilization in HCI at UCSD. </div>
   </div>
   
