--- a/projects.html
+++ b/projects.html
@@ -69,9 +69,9 @@
   
         <h1 class = "intro">View some of my projects here!</h1>
     <div class="row">
-      <div class="col-4"> <img src = "IMG_2446.JPG" height = "300px"></div>
-      <div class="col-4"> <img src = "IMG_2446.JPG" height = "300px"></div>
-      <div class="col-4"> <img src = "IMG_2446.JPG" height = "300px"></div>
+      <div class="col-4"> <img src = "IMG_2446.jpg" height = "300px"></div>
+      <div class="col-4"> <img src = "IMG_2446.jpg" height = "300px"></div>
+      <div class="col-4"> <img src = "IMG_2446.jpg" height = "300px"></div>
     </div>
   
       <!--<article style = "padding:10px;float: left; width:40%">
