--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -185,7 +185,7 @@
         <h6 style = "top: 660px"> <b>My Role: </b> </h6>
         <h4 style = "top: 710px"> User Research </h4>
         <h4 style = "top: 1000px"> Story Board goes here, user research we found on how this is a good app </h4>
-        <div class = "note"> <a target = "_blank" href = "http://a9-borrow.herokuapp.com/home"><br>Click Here to view project!</a> <br><br> Username: COGS <br> Password: 120</div>
+        <div class = "note"> <a target = "_blank" href = "http://a10-borrowngo.herokuapp.com/home"><br>Click Here to view project!</a> <br><br> Username: COGS <br> Password: 120</div>
         <div class = "stick"> </div>
         <div class = "ball"> </div>
   
