--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style type="text/css">
       body{
-        background-color: #FFFBF1;
+        background-color: #fcfcf2;
       }
       .rec{
         position: absolute;
@@ -17,7 +17,7 @@
       height: 100px;
       left: 0px;
       top: 0px;
-      background: #FEDC85;
+      background: #;
       }
       .intro{
         position: absolute;
@@ -43,13 +43,13 @@
       }
       .project1{
       position: absolute;
-      width: 500px;
+      width: 1100px;
       height: 321px;
       left: 136px;
       top: 455px;
       border: 1px solid #000000;
       box-sizing: border-box;
-      border-radius: 35px;
+      border-radius: 10px;
       background-color: transparent;
       }
      
@@ -89,52 +89,6 @@
       }
 
     /* This container is needed to position the front and back side */
-    .flip-box-inner {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      transition: transform 0.8s;
-     transform-style: preserve-3d;
-      }
-    /* Do an horizontal flip when you move the mouse over the flip box container */
-    .project1:hover .flip-box-inner {
-      transform: rotateY(180deg);
-    }
-
-    /* Position the front and back side */
-    .flip-box-front, .flip-box-back {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      -webkit-backface-visibility: hidden; /* Safari */
-      backface-visibility: hidden;
-    }
-
-    /* Style the front side (fallback if image is missing) */
-    .flip-box-front {
-      background-color: #bbb;
-      color: black;
-      background-image: url(https://images.unsplash.com/photo-1558769132-cb1aea458c5e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
-      width: 500px;
-      height: 321px;
-      border: 1px solid #000000;
-      box-sizing: border-box;
-      border-radius: 35px
-    }
-
-    /* Style the back side */
-    .flip-box-back {
-      background-color: #E3C1A2;
-      padding: 20px;
-      color: black;
-      transform: rotateY(180deg);
-      width: 500px;
-      height: 321px;
-      border: 1px solid #000000;
-      box-sizing: border-box;
-      border-radius: 35px
-        }
 
     </style>
 
@@ -169,19 +123,10 @@
     </div>
   </div>
   
-        <h1 class = "intro">Hi, my name is Sophia. I am a user experience designer.</h1>
-        <h3 class = "look">View some of my projects here!</h3>
-<div class="project1">
-      <div class="flip-box-inner">
-        <div class="flip-box-front">
-          <a href = "borrowingApp.html">
-        </div>
-        <div class="flip-box-back">
-          <h2>Borrowing Clothes App</h2>
-          <p></p>
-        </div>
-    </div>
-</div>
+    <h1 class = "intro">Hi, my name is Sophia. I am a user experience designer.</h1>
+    <h3 class = "look">View some of my projects here!</h3>
+    <a href = "borrowingApp.html"><img class = "project1" src= "https://images-na.ssl-images-amazon.com/images/I/11RJwrmMlVL._SX331_BO1,204,203,200_.jpg"> </a>
+
       
     <div class = "project3 container"> </div>
 
