--- a/aboutme.html
+++ b/aboutme.html
@@ -9,55 +9,27 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style type="text/css">
       body{
-        background-color: #FFFFFC;
+        background-color: ##fffaff;
       }
       .rec{
-        position: absolute;
+      position: absolute;
       width: 100%;
       height: 100px;
-      left: 0px;
-      top: 0px;
-      background: #E3C1A2;
+      left: 1px;
       }
-      .intro{
-        position: absolute;
-      height: 52px;
-      left: 250px;
-      top: 182px;
+
+      .borrowing{
+      position: absolute;
+
       font-family: Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 40px;
       line-height: 47px;
+      text-align: center;
       }
-      .look{
-        position: absolute;
-      height: 55px;
-      left: 488px;
-      top: 306px;
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 30px;
-      line-height: 35px;
-      }
-      .col-sm-5{
-        top: 100px;
 
-      }
-      img {
-      padding: 10px;
-      height: 400px;
-      transform: rotate(90deg)
-      }
-      .col-sm-7{
-      top: 100px;
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 30px;
-       width: 500px;
-      }
+    /* This container is needed to position the front and back side */
 
     </style>
 
@@ -77,13 +49,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-               <a class = "nav-item nav-link" href = "aboutme.html" style = "padding-left: 20px; color: #9c750b"> About Me! </a>
+               <a class = "nav-item nav-link" href = "aboutme.html" style = "padding-left: 20px; color: #707070"> About Me! </a>
               </li>
               <li class="nav-item">
-                <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #9c750b"> Projects <span class = "sr-only">(current)</span></a>
+                <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #707070"> Projects <span class = "sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class = "nav-item nav-link" target = "_blank" href = "index.html" style = "padding-left: 20px; color: #9c750b"> Resume </a>
+                <a class = "nav-item nav-link" target = "_blank" href = "index.html" style = "padding-left: 20px; color: #707070"> Resume </a>
               </li>
             </ul>
           </div>
@@ -91,12 +63,8 @@
       </div>
     </div>
   </div>
-   <div class="row">
-    <div class="col-sm-5"> <img src = "IMG_2446.jpg"></div>
-    <div class="col-sm-7" style="width: 400px"> Hi, my name is Sophia. I am a third year <br> majoring in Psychology and Cognitive Science <br> with a specilization in HCI at UCSD. </div>
-  </div>
   
-        
+   
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
       </article> -->
