--- a/index.html
+++ b/index.html
@@ -9,73 +9,71 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style type="text/css">
       body{
-        background-color: #fcfcf2;
+        background-color: #fffaff;
       }
       .rec{
         position: absolute;
       width: 100%;
       height: 100px;
-      left: 0px;
-      top: 0px;
-      background: #;
+      left: 1px;
       }
+
       .intro{
         position: absolute;
       height: 52px;
-      left: 250px;
+      left: 175px;
       top: 182px;
-      font-family: Roboto;
+      font-family: Segoe UI;
       font-style: normal;
       font-weight: normal;
-      font-size: 40px;
-      line-height: 47px;
+      font-size: 25px;
+      line-height: 40px;
+      color: #707070;
       }
       .look{
-        position: absolute;
+      position: absolute;
       height: 55px;
       left: 488px;
-      top: 306px;
-      font-family: Roboto;
+      top: 350px;
+      font-family: Segoe UI;
       font-style: normal;
       font-weight: normal;
-      font-size: 30px;
+      font-size: 20px;
       line-height: 35px;
       }
       .project1{
       position: absolute;
-      width: 1100px;
-      height: 321px;
-      left: 136px;
-      top: 455px;
+      width: 1000px;
+      height: 275px;
+      left: 175px;
+      top: 400px;
       border: 1px solid #000000;
       box-sizing: border-box;
-      border-radius: 10px;
+      border-radius: 5px;
       background-color: transparent;
       }
+      .project1:hover {
+ 		 -ms-transform: scale(1.1); /* IE 9 */
+		  -webkit-transform: scale(1.1); /* Safari 3-8 */
+		  transform: scale(1.1); 
+		}
      
-      .project2{
-        background-color: transparent;
-      perspective: 1000px; 
-      position: absolute;
-      width: 500px;
-      height: 321px;
-      left: 723px;
-      top: 455px;
-      border: 1px solid #000000;
-      box-sizing: border-box;
-      border-radius: 35px;
-      }
       .project3
       {
       position: absolute;
-      width: 1100px;
-      height: 321px;
-      left: 136px;
-      top: 820px;
+      width: 1000px;
+      height: 275px;
+      left: 175px;
+      top: 700px;
       border: 1px solid #000000;
       box-sizing: border-box;
-      border-radius: 35px;
+      border-radius: 5px;
       }
+      .project3:hover {
+ 		 -ms-transform: scale(1.1); /* IE 9 */
+		  -webkit-transform: scale(1.1); /* Safari 3-8 */
+		  transform: scale(1.1); 
+		}
 
       .borrowing{
       position: absolute;
@@ -86,6 +84,16 @@
       font-size: 40px;
       line-height: 47px;
       text-align: center;
+      }
+
+      .name{
+      	color: black;
+      }
+      .school{
+      	color: #B78727;
+      }
+      .UC{
+      	color: #274DB7;
       }
 
     /* This container is needed to position the front and back side */
@@ -108,13 +116,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-               <a class = "nav-item nav-link" href = "aboutme.html" style = "padding-left: 20px; color: #9c750b"> About Me! </a>
+               <a class = "nav-item nav-link" href = "aboutme.html" style = "padding-left: 20px; color: #707070"> About Me! </a>
               </li>
               <li class="nav-item">
-                <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #9c750b"> Projects <span class = "sr-only">(current)</span></a>
+                <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #707070"> Projects <span class = "sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class = "nav-item nav-link" target = "_blank" href = "index.html" style = "padding-left: 20px; color: #9c750b"> Resume </a>
+                <a class = "nav-item nav-link" target = "_blank" href = "index.html" style = "padding-left: 20px; color: #707070"> Resume </a>
               </li>
             </ul>
           </div>
@@ -123,9 +131,9 @@
     </div>
   </div>
   
-    <h1 class = "intro">Hi, my name is Sophia. I am a user experience designer.</h1>
-    <h3 class = "look">View some of my projects here!</h3>
-    <a href = "borrowingApp.html"><img class = "project1" src= "https://images-na.ssl-images-amazon.com/images/I/11RJwrmMlVL._SX331_BO1,204,203,200_.jpg"> </a>
+    <h1 class = "intro">Hi I'm <span class = "name"> Sophia Dominguez</span> <br>a <span class = "UC">UX designer</span> <br> a third year at <span class = "school">UC San Diego.</h1>
+    <h3 class = "look">Check out some of my work below </h3>
+    <a href = "borrowingApp.html"><img class = "project1" src="borrow.n.go.jpg"> </a>
 
       
     <div class = "project3 container"> </div>
