low-f proto update

--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -177,13 +177,29 @@
         </div>
 
         <div>
-          <h4 class = "g" style="top: 3775px">Low-fidelity Prototypes</h4>
+          <h4 class = "g" style="top: 3775px">Low-Fidelity Prototypes</h4>
           <h5 class="g" style="top: 3825px">Sketches</h5>
           <p class="g" style="top: 3855px; font-size: 16px; line-height: 20px">We first created some digital sketches. Here we decided the important features our app needed and the flow of our app we wanted our users to follow.</p>
+          <img src="sketches.png" style="top: 3890px; position: absolute; left: 325px; width: 700px; height: 1000px" >
+        <p class="g" style="top: 4890px; font-size: 17px; line-height: 20px">We then created some digital wireframes on Adobe XD of our two main pages. Using these wirefames, we were able to visualize our app better.</p>
+        <img src="wireframe.png" class="g" style="position: absolute; top: 4950px; height: 500px; left: 400px; border: 2px solid black">
+        <img src="wireframe2.png" class="g" style="position: absolute; top: 4950px; height: 500px; left: 700px; border: 2px solid black">
+        <h5 class="g" style="top: 5490px">Bare Bones</h5>
+        <p class="g" style="top: 5540px; font-size: 17px; line-height: 20px"> We then created a semi-functional prototype using an open-source UI framework called Onsen UI. In this prototype, we focused more on the basic functionality rather than the aesthetics. <a href="https://a6-borrowclothes.herokuapp.com/">Link to this prototype.</a></p>
+        <img src="home.png" class="g" style="position: absolute; top: 5600px; height: 400px; left: 180px; border: 2px solid black">
+        <img src="add.png" class="g" style="position: absolute; top: 5600px; height: 400px; left: 430px; border: 2px solid black">
+        <img src="noti.png" class="g" style="position: absolute; top: 5600px; height: 400px; left: 680px; border: 2px solid black">
+        <img src="closet.png" class="g" style="position: absolute; top: 5600px; height: 400px; left: 930px; border: 2px solid black">
+        <p class="g" style="top: 6020px; font-size: 17px; line-height: 20px"> How it works: you find a clothing item you want to borrow on the home page, and you click on it and request to borrow it. From there you wait to see if the user will accept or decline your request. If they accept it, you can message them on how to exchange the item. Here we made some design changes based on our coding abilities, like adding a nav bar instead of a swipeable separation between apparel and shoes. <br> <br>
+          Feedback we received from the skeleton:
+          After presenting our skeleton to our peers, we received valuable feedback we implemented before user testing. One main concern that was brought up was how are we going to implement a system to keep people from just borrowing and never lending? In response to this, we decided to implement a point system that will act as an incentive to keep users engaged and to lend out items. We also received some feedback on the layout, such as separation of notifications on the notification tab and the popups. And how certain icons/wording did not fit the users’ mental models. We took the criticism into account and changed our app to better suit our users. 
+        </p>
+        <h4 class = "g" style="top: 6250px">High-Fidelity Prototype</h4>
         </div>
 
+
 <br><br>
-<p style="color: white; position: absolute; top: 5000px">     .....................                    <br>               .................        <br>      ...........        </p>
+<p style="color: white; position: absolute; top: 10000px">     .....................                    <br>               .................        <br>      ...........        </p>
         
   
       <!--<article style = "padding:10px;float: left; width:40%">
