--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 
       
     <div class = "project3 container"> </div>
+    <p style="color: white; position: absolute; top: 1000px">     ...    </p>
 
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
