--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -75,7 +75,7 @@
       }
       p{
         position: absolute;
-        width: 1000px;
+        width: 1050px;
         height: 42px;
         left: 125px;
         top: 530px;
@@ -181,21 +181,70 @@
           <h5 class="g" style="top: 3825px">Sketches</h5>
           <p class="g" style="top: 3855px; font-size: 16px; line-height: 20px">We first created some digital sketches. Here we decided the important features our app needed and the flow of our app we wanted our users to follow.</p>
           <img src="sketches.png" style="top: 3890px; position: absolute; left: 325px; width: 700px; height: 1000px" >
-        <p class="g" style="top: 4890px; font-size: 17px; line-height: 20px">We then created some digital wireframes on Adobe XD of our two main pages. Using these wirefames, we were able to visualize our app better.</p>
-        <img src="wireframe.png" class="g" style="position: absolute; top: 4950px; height: 500px; left: 400px; border: 2px solid black">
-        <img src="wireframe2.png" class="g" style="position: absolute; top: 4950px; height: 500px; left: 700px; border: 2px solid black">
-        <h5 class="g" style="top: 5490px">Bare Bones</h5>
-        <p class="g" style="top: 5540px; font-size: 17px; line-height: 20px"> We then created a semi-functional prototype using an open-source UI framework called Onsen UI. In this prototype, we focused more on the basic functionality rather than the aesthetics. <a href="https://a6-borrowclothes.herokuapp.com/">Link to this prototype.</a></p>
-        <img src="home.PNG" class="g" style="position: absolute; top: 5600px; height: 400px; left: 180px; border: 2px solid black">
-        <img src="add.PNG" class="g" style="position: absolute; top: 5600px; height: 400px; left: 430px; border: 2px solid black">
-        <img src="noti.PNG" class="g" style="position: absolute; top: 5600px; height: 400px; left: 680px; border: 2px solid black">
-        <img src="closet.PNG" class="g" style="position: absolute; top: 5600px; height: 400px; left: 930px; border: 2px solid black">
-        <p class="g" style="top: 6020px; font-size: 17px; line-height: 20px"> How it works: you find a clothing item you want to borrow on the home page, and you click on it and request to borrow it. From there you wait to see if the user will accept or decline your request. If they accept it, you can message them on how to exchange the item. Here we made some design changes based on our coding abilities, like adding a nav bar instead of a swipeable separation between apparel and shoes. <br> <br>
-          Feedback we received from the skeleton:
-          After presenting our skeleton to our peers, we received valuable feedback we implemented before user testing. One main concern that was brought up was how are we going to implement a system to keep people from just borrowing and never lending? In response to this, we decided to implement a point system that will act as an incentive to keep users engaged and to lend out items. We also received some feedback on the layout, such as separation of notifications on the notification tab and the popups. And how certain icons/wording did not fit the users’ mental models. We took the criticism into account and changed our app to better suit our users. 
-        </p>
-        <h4 class = "g" style="top: 6250px">High-Fidelity Prototype</h4>
+          <p class="g" style="top: 4890px; font-size: 17px; line-height: 20px">We then created some digital wireframes on Adobe XD of our two main pages. Using these wirefames, we were able to visualize our app better.</p>
+          <img src="wireframe.png" class="g" style="position: absolute; top: 4950px; height: 500px; left: 400px; border: 2px solid black">
+          <img src="wireframe2.png" class="g" style="position: absolute; top: 4950px; height: 500px; left: 700px; border: 2px solid black">
+          <h5 class="g" style="top: 5490px">Bare Bones</h5>
+          <p class="g" style="top: 5540px; font-size: 17px; line-height: 20px"> We then created a semi-functional prototype using an open-source UI framework called Onsen UI. In this prototype, we focused more on the basic functionality rather than the aesthetics. <a href="https://a6-borrowclothes.herokuapp.com/">Link to this prototype.</a></p>
+          <img src="home.PNG" class="g" style="position: absolute; top: 5600px; height: 400px; left: 180px; border: 2px solid black">
+          <img src="add.PNG" class="g" style="position: absolute; top: 5600px; height: 400px; left: 430px; border: 2px solid black">
+          <img src="noti.PNG" class="g" style="position: absolute; top: 5600px; height: 400px; left: 680px; border: 2px solid black">
+          <img src="closet.PNG" class="g" style="position: absolute; top: 5600px; height: 400px; left: 930px; border: 2px solid black">
+          <p class="g" style="top: 6020px; font-size: 17px; line-height: 20px">  How it works: you find a clothing item you want to borrow on the home page, and you click on it and request to borrow it. From there you wait to see if the user will accept or decline your request. If they accept it, you can message them on how to exchange the item. Here we made some design changes based on our coding abilities, like adding a nav bar instead of a swipeable separation between apparel and shoes. <br> <br>
+            Feedback we received from the skeleton:
+            After presenting our skeleton to our peers, we received valuable feedback we implemented before user testing. One main concern that was brought up was how are we going to implement a system to keep people from just borrowing and never lending? In response to this, we decided to implement a point system that will act as an incentive to keep users engaged and to lend out items. We also received some feedback on the layout, such as separation of notifications on the notification tab and the popups. And how certain icons/wording did not fit the users’ mental models. We took the criticism into account and changed our app to better suit our users. 
+          </p>
         </div>
+
+        <div>
+          <h4 class = "g" style="top: 6250px">High-Fidelity Prototype</h4>
+          <img src="apparelH.jpg" style="position: absolute; top: 6300px; height: 400px; left: 180px; border: 2px solid black">
+          <img src="addH.jpg" style="position: absolute; top: 6300px; height: 400px; left: 430px; border: 2px solid black">
+          <img src="notification.jpg" style="position: absolute; top: 6300px; height: 400px; left: 680px; border: 2px solid black">
+          <img src="closetH.jpg" style="position: absolute; top: 6300px; height: 400px; left: 930px; border: 2px solid black">
+        </div>
+
+        <div>
+          <h4 class = "g" style="top: 6750px">User Testing</h4>
+          <p class="g" style="top: 6800px; font-size: 17px; line-height: 20px">Next, we conducted 3 in depth user tests on our high fidelity prototype. During these user tests, my team and I focused on observing users conduct specific tasks without any input. We started off by having all participants sign a consent form, then we read a script explaining to the app and then we asked users to conduct tasks on our app. We asked them to conduct tasks like add an item to your closet, and request to borrow an item. We then asked some debriefing questions to get a better sense of what was going through their minds as they conducted the tasks and their general thoughts on the app. <br> Our general findings that were consistent between all 3 participants were that: 
+            
+          </p>
+          <ul style="top: 6925px; width: 1050px" class="g">
+              <li>
+                The apparel and footwear layouts were inconsistent. The home page separated shoes and apparel through a nav bar and due to the apparel being the landing page, it looked different then the shoes tab. <br> <span style="color: white">...............................................</span>
+                <img src="trans.jpg" width="200px">
+                 <img src="transition.jpg" width="200px">
+                <img src="footwear.jpg" width="200px">
+              </li>
+              <li>
+                 The app lacked feedback in certain areas, such as a verification or confirmation that an item was added to their closet successfully. 
+              </li>
+              <li>
+                The navigation on the profile page was ambiguous. The users missed the nav bar that contained the borrow and lend tabs in the notifications tab, creating some confusion. This also brought up to our attention how certain features lacked visibility.
+              </li>
+              <li>
+                Within our notification tab, we separated the different kinds of notifications on a nav bar. This hid the borrow and lend notifications, making it harder for the user to perform tasks. In our next user tests, we changed this tab to try to solve this problem. <br><span style="color: white">.........................................................</span>
+                <img src="annotated.jpg" height="200px">
+                <img src="noti.jpg" height="200px">
+
+              </li>
+              <li>
+                And lastly, the users liked the general flow of the app. They found it simple and not overwhelming. 
+              </li>
+            </ul>
+        </div>
+
+        <div>
+          <h4 class = "g" style="top: 7575px">Alternate Designs</h4>
+          <h5 class = "g" style="top: 7625px">A/B testing</h5>
+          <p class="g" style="top: 7675px; font-size: 18px; line-height: 20px">Taking the Notifications tab and the lack of visibility of the borrow and lend tabs, we decided to conduct an A/B test. We created a different version of the notifications tab and used google analytics to randomize which user got version A or B. We distributed our app to 34 users that were interested in fashion, clothes shopping and/or have borrowed clothing from someone in the past. </p>
+          <img src="googleAna.JPG" style = "top: 7750px; width: 900px; position: absolute; left: 225px" >
+          <img src="AB.JPG" style = "top: 8250px; width: 900px; position: absolute; left: 225px" >
+          <p class="g" style="top: 9000px; font-size: 18px; line-height: 20px">We measured the amount of clicks on buttons on the borrow and lend tabs to see which version led to more views of the borrow and lend tabs. Design B had the most amount of clicks so we went with that design. <br> Additionally we received feedback from our peers on the branding of our app, the visibility of the shoes tab and the login page. We were told that we should appeal to our target audience more by rebranding our app, focusing more on the aesthetics of it. </p>
+
+        </div>
+
+
 
 
 <br><br>
