--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       border: 1px solid #000000;
       box-sizing: border-box;
       border-radius: 5px;
+      background-color: transparent;
       }
       .project3:hover {
  		 -ms-transform: scale(1.1); /* IE 9 */
@@ -136,7 +137,7 @@
     <a href = "borrowingApp.html"><img class = "project1" src="borrow.n.go.jpg"> </a>
 
       
-    <div class = "project3 container"> </div>
+    <a href = "borrowingApp.html"> <img class = "project3" src="borrow.n.go.jpg"> </div>
     <p style="color: white; position: absolute; top: 1000px">     ...    </p>
 
       <!--<article style = "padding:10px;float: left; width:40%">
